# Note-Micro-Service

./: README.md  nginx.conf
docker/: docker-compose-mq.yml  docker-compose.redis.yml  docker-compose.yml
note/: .env  Dockerfile  note.db  pyproject.toml
note/migrations/models/: 0_20251101215740_init.py
note/src/configs/: env.py
note/src/core/: models.py  routes.py  schemas.py  services.py
note/src/scripts/: main.py
note/src/utilities/: repository.py
permission/: .env  Dockerfile  database.py  main.py  models.py  permission.db  pyproject.toml  repository.py  routes.py  schemas.py  services.py
permission/migrations/models/: 0_20251102053545_init.py
permission/src/core/: database.py  enums.py  models.py  routes.py  schemas.py  services.py
permission/src/scripts/: main.py
user/: .env  Dockerfile  pyproject.toml  user.db
user/migrations/models/: 0_20251102075249_init.py
user/src/core/: models.py  routes.py  schemas.py  services.py
user/src/scripts/: aerich.py  main.py
user/src/utlities/: hash.py  repository.py
