[project]
name = "permission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.4",
    "orjson>=3.11.4",
    "pika>=1.3.2",
    "python-dotenv>=1.2.1",
    "tortoise>=0.1.1",
    "uvicorn[standard]>=0.38.0",
]
